
dist_check_SCRIPTS = \
	test1.py \
	test2.py \
	test3.py \
	test4.py \
	test5.py \
	testDigitalSignatures.py

TESTS = $(dist_check_SCRIPTS)

EXTRA_DIST = \
	test-encrypt.pdf \
	test-links.pdf \
	test-mime.bin \
	test-page-labels.pdf \
	test-signature-unsigned.pdf \
	test-signature-valid.pdf \
	test-signature-invalid.pdf \
	test6.py \
	test7.py \
	testDigitalSignatures.py \
	generate-signature-fixtures.sh

-include $(top_srcdir)/git.mk
